--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,68 @@
 {
   "manifest_version": 3,
-  "name": "拓元售票篩選器",
-  "version": "1.1.0",
-  "description": "在拓元售票網站上快速篩選您想要的區域票券",
+  "name": "搶票柴柴-售票網站篩選器",
+  "version": "1.2.0",
+  "description": "在售票網站上快速篩選您想要的區域票券",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "scripting"
   ],
   "host_permissions": [
-    "*://*.tixcraft.com/*"
+    "*://*.tixcraft.com/*",
+    "*://*.kktix.com/*",
+    "*://kktix.com/*",
+    "*://*.ibon.com.tw/*",
+    "*://ticket.ibon.com.tw/*",
+    "*://orders.ibon.com.tw/*",
+    "*://*.cityline.com/*",
+    "*://www.cityline.com/*"
   ],
   "content_scripts": [
     {
-      "matches": ["*://*.tixcraft.com/*"],
+      "matches": [
+        "*://*.tixcraft.com/*",
+        "*://*.kktix.com/*",
+        "*://*.ibon.com.tw/*",
+        "*://ticket.ibon.com.tw/*",
+        "*://orders.ibon.com.tw/*",
+        "*://*.cityline.com/*",
+        "*://www.cityline.com/*"
+      ],
       "js": ["content.js"]
+    },
+    {
+      "matches": ["*://orders.ibon.com.tw/*"],
+      "js": ["shadowInject.js"],
+      "run_at": "document_start",
+      "all_frames": true
+    },
+    {
+      "matches": [
+        "*://*.tixcraft.com/ticket/area/*",
+        "*://*.kktix.com/*",
+        "*://*.ibon.com.tw/*",
+        "*://*.cityline.com/*"
+      ],
+      "js": ["earlyLoader.js"],
+      "run_at": "document_start",
+      "all_frames": true
     }
   ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "web_accessible_resources": [{
+    "resources": ["injected.js", "styles.css"],
+    "matches": [
+      "*://orders.ibon.com.tw/*",
+      "*://*.tixcraft.com/*",
+      "*://*.kktix.com/*",
+      "*://*.ibon.com.tw/*",
+      "*://*.cityline.com/*"
+    ]
+  }],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
