--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "搶票柴柴-售票網站篩選器",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "在售票網站上快速篩選您想要的區域票券",
   "permissions": [
     "storage",
@@ -40,10 +40,15 @@
       "js": ["content.js"]
     },
     {
-      "matches": ["*://orders.ibon.com.tw/*"],
+      "matches": [
+        "*://*.ibon.com.tw/*",
+        "*://ticket.ibon.com.tw/*",
+        "*://orders.ibon.com.tw/*"
+      ],
       "js": ["shadowInject.js"],
       "run_at": "document_start",
-      "all_frames": true
+      "all_frames": true,
+      "world": "MAIN"
     },
     {
       "matches": [
@@ -95,5 +100,9 @@
     "16": "images/icon16.png",
     "48": "images/icon48.png",
     "128": "images/icon128.png"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
   }
 } 
